# serde_haxball_stadium

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
src/: background.rs  ball_physics.rs  constants.rs  disc.rs  goal.rs  hx_trait.rs  main.rs  plane.rs  player_physics.rs  segment.rs  stadium.rs  utils.rs  vertex.rs
stadiums/: classic.hbs  fighting-single.json5  futsal-big.json5  futsal-classic.hbs
